# study_stat

./: .gitignore  cspell.json  main.py  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
notebooks/: chap01.ipynb  chap02.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb  chap06.ipynb  chap07.ipynb  chap08.ipynb
