[project]
name = "study-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "empiricaldist>=0.9.0",
    "lxml>=6.0.2",
    "statadict>=1.1.0",
    "statsmodels>=0.14.6",
    "tables>=3.10.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "nbstripout>=0.8.2",
    "ruff>=0.14.11",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
